--- a/index.html
+++ b/index.html
@@ -69,7 +69,17 @@
 
         </div>
       </div>
+            </div>
+        </div>
+      </div>
+            </div>
+        </div>
+      </div>
       <div class="container mt-5">
+        <div class="d-flex justify-content-between ">
+            <h2 class="mb-4">Used BIkes</h2>
+            <a href="#" class="text-warning text-decoration-none mt-3">View More</a>
+        </div>
         <div class="row">
             <div class="col-12 col-sm-6 col-md-2 col-lg-3">
                 <div class="card">
